Hero panel and homepage converted to GOV.UK frontend  - Homepage blue hero panel moved 1 pixel up to hide the phase banner's lower grey border  - Hero panel bespoke CSS reduced and refactored  - Search in hero panel now uses search component from GOV.UK Publishing Components  - Line height on paragraph text increased to avoid focus state overlap

--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -1,57 +1,26 @@
-.hero {
-  background-color: $govuk-blue;
-  color: $white;
-
-  margin-bottom: $gutter-half;
+.app-c-hero {
+  background-color: $govuk-brand-colour;
+  color: govuk-colour("white");
+  margin-bottom: govuk-spacing(3);
+  position: relative;
+  top: -1px;
 
   @include media(tablet) {
-    margin-bottom: $gutter;
+    margin-bottom: govuk-spacing(6);
   }
 
   a:link,
   a:visited {
-    font-weight: bold;
-    color: $white;
-  }
-
-  a:hover,
-  a:active {
-    color: $light-blue-25;
-  }
-
-  &__content {
-    $border-top-width: 10px;
-
-    @extend %site-width-container;
-
-    padding: ($gutter-half + $border-top-width) 0 $gutter-half;
-
-    @include media(tablet) {
-      padding: ($gutter + $border-top-width) 0 $gutter;
-    }
-  }
-
-  &__title {
-    @include core-48;
-    margin-bottom: $gutter;
+    color: govuk-colour("white");
     font-weight: bold;
   }
+}
 
-  &__description {
-    @include core-24;
-  }
+.app-c-hero-lead {
+  line-height: 1.35;
+}
 
-  &__feedback-link {
-    @include core-16;
-    line-height: 1.25;
-    margin-top: $gutter;
-
-    @include media(tablet) {
-      margin-top: 0;
-    }
-  }
-
-  &__search {
-    margin-bottom: $gutter-half;
-  }
+.app-c-heading--inverse,
+.app-c-body--inverse {
+  color: govuk-colour("white");
 }
