--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -1,11 +1,5 @@
 // Text
-p {
-  margin-top: em(5, 16);
-  margin-bottom: em(20, 16);
-
-  @include media(tablet) {
-    margin-top: em(5);
-    margin-bottom: em(20);
-  }
-
+.app-c-body,
+.app-c-body-s {
+  line-height: 1.45;
 }
